# rdma

./: .gitignore  CMakeLists.txt  README_DEPLOYMENT.md  benchmark_output.txt  cluster_info.sh  deploy.sh  nodes.txt  run_all_experiments.sh  run_mu_watch.sh  run_mu_watch.sh.bak  run_synra_watch.sh  run_synra_watch.sh.bak  synra_watch_results.txt
graphing/: plot_cas_pipeline.py  plot_professor_summary.py
graphing/data/: cas_pipelined.csv
graphing/plots/: summary_skew_0.00.txt
include/rdma/: cas_pipeline.h  client.h  common.h  common.h.backup  faa_pipeline.h  local_ticket_faa_lock_pipeline.h  lock.h  lock_strategy.h  lock_table.h  mu_encoding.h  server.h  simple_mu_encoding.h  tas_pipeline.h  tcp_qp_exchange.h  ticket_faa_lock_pipeline.h  zipf_lock_picker.h
scripts/: run.sh  setup.sh
src/: cas_pipeline.cpp  client.cpp  client_old.cpp  faa_pipeline.cpp  local_ticket_faa_lock_pipeline.cpp  lock.cpp  main.cpp  mu_pipeline.cpp  server.cpp  server_old.cpp  simple_cas_pipeline.cpp  tas_pipeline.cpp  ticket_faa_lock_pipeline.cpp
src/junk/: mu_client.h  mu_follower.h  mu_leader.h  synra_client.h  synra_faa.h  synra_node.h  synra_tas.h
src/pipelines/: cas_pipeline.cpp  mu_pipeline.cpp  mu_watch_pipeline.cpp  simple_cas_pipeline.cpp  simple_mu_pipeline.cpp  simple_watch_pipeline.cpp  synra_faa_pipeline.cpp  tas_pipeline.cpp  ticket_faa_lock_pipeline.cpp  watch_pipeline.cpp
src/servers/: mu_follower.cpp  mu_leader.cpp  simple_mu_leader.cpp  synra_node.cpp
src/strategies/: cas_strategy.cpp  faa_strategy.cpp  mu_strategy.cpp  tas_strategy.cpp
(+19 files in other folders)
